--- a/WebThuvien/Views/Sach/Index.cshtml
+++ b/WebThuvien/Views/Sach/Index.cshtml
@@ -72,39 +72,29 @@
                                         <figcaption>
                                             <header>
                                                 <h4><a href="/Sach/Chitietsach?MaSach=@item.MASACH">@item.TENSACH</a></h4>
-                                                <p><strong>Author:</strong>  F. Scott Fitzgerald</p>
-                                                <p><strong>ISBN:</strong>  9781581573268</p>
+                                                <p><strong>Tác giả:</strong>@item.TACGIA.TENTACGIA</p>
+                                                <p><strong>Mã sách:</strong>  @item.MASACH</p>
                                             </header>
-                                            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. Pellentesque dolor turpis, pulvinar varius.</p>
+                                            <p>@item.GHICHU</p>
                                             <div class="actions">
                                                 <ul>
                                                     <li>
-                                                        <a href="#" target="_blank" data-toggle="blog-tags" data-placement="top" title="Add TO CART">
-                                                            <i class="fa fa-shopping-cart"></i>
-                                                        </a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#" target="_blank" data-toggle="blog-tags" data-placement="top" title="Like">
+                                                        <a href="#" target="_blank" data-toggle="blog-tags" data-placement="top" title="Yêu thích">
                                                             <i class="fa fa-heart"></i>
                                                         </a>
                                                     </li>
                                                     <li>
-                                                        <a href="#" target="_blank" data-toggle="blog-tags" data-placement="top" title="Mail">
-                                                            <i class="fa fa-envelope"></i>
-                                                        </a>
-                                                    </li>
-                                                    <li>
-                                                        <a href="#" target="_blank" data-toggle="blog-tags" data-placement="top" title="Search">
+                                                        <a href="#" target="_blank" data-toggle="blog-tags" data-placement="top" title="Tìm kiếm">
                                                             <i class="fa fa-search"></i>
                                                         </a>
                                                     </li>
                                                     <li>
-                                                        <a href="#" target="_blank" data-toggle="blog-tags" data-placement="top" title="Print">
+                                                        <a href="#" target="_blank" data-toggle="blog-tags" data-placement="top" title="In">
                                                             <i class="fa fa-print"></i>
                                                         </a>
                                                     </li>
                                                     <li>
-                                                        <a href="#" target="_blank" data-toggle="blog-tags" data-placement="top" title="Share">
+                                                        <a href="#" target="_blank" data-toggle="blog-tags" data-placement="top" title="Chia sẻ">
                                                             <i class="fa fa-share-alt"></i>
                                                         </a>
                                                     </li>
