--- a/WebThuvien/Views/Sach/Chitietsach.cshtml
+++ b/WebThuvien/Views/Sach/Chitietsach.cshtml
@@ -65,7 +65,7 @@
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="#" target="_blank" data-toggle="blog-tags" data-placement="top" title="" data-original-title="Tải xuống">
+                                                <a href="/Sach/TaiSach?MaSach=@ViewBag.sach.MASACH" target="_blank" data-toggle="blog-tags" data-placement="top" title="" data-original-title="Tải xuống">
                                                     <i class="fa fa-long-arrow-right"></i>
                                                 </a>
                                             </li>
@@ -96,8 +96,8 @@
                                     <p><strong>Lĩnh vực:</strong> <a href="#" style="color:#f62457">@ViewBag.linhvuc.TENLINHVUC</a></p>
                                     <p><strong>Nhà xuất bản :</strong> <a href="#" style="color:#f62457">@ViewBag.nxb.TENNXB</a></p>
                                     <p><strong>Đặt mượn sách :</strong>  01</p>
-                                    <a href="#." class="btn btn-dark-gray">Tải xuống</a>
-                                    <a href="~/Content/ClientContent/FILE_PDF/@ViewBag.sach.FILEPATH" class="btn btn-dark-gray">Đọc sách trong trang mới</a>
+                                    <a href="/Sach/TaiSach?MaSach=@ViewBag.sach.MASACH" class="btn btn-dark-gray">Tải xuống</a>
+                                    <a href="~/Content/ClientContent/FILE_PDF/@ViewBag.sach.FILEPATH" class="btn btn-dark-gray">Đọc sách</a>
                                     <a href="#." class="btn btn-dark-gray">Xem thêm sách tương tự</a>
                                 </div>
                             </div>
