THYA ĐỔI KÍCH THƯỚC NHỎ NHẤT MINHEIGHT CỦA ẢNH

--- a/WebThuvien/Views/Home/CatagorySection.cshtml
+++ b/WebThuvien/Views/Home/CatagorySection.cshtml
@@ -22,15 +22,15 @@
                     {
                         <li class="category-item @item.MALINHVUC">
                             <figure>
-                                <img style="height:328px;width:100%" src="~/Content/ClientContent/images/Books/@item.HINHANH" alt="New Releaase" />
+                                <img style="min-height:328px;width:100%; max-height:330px;" src="~/Content/ClientContent/images/Books/@item.HINHANH" alt="New Releaase" />
                                 <figcaption class="bg-blue">
                                     <div class="diamond">
                                         <i class="book"></i>
                                     </div>
                                     <div class="info-block">
-                                        <h4>Sách</h4>
-                                        <span class="author"><strong>Tác giả:</strong> F. Scott Fitzgerald</span>
-                                        <span class="author"><strong>Lĩnh vực:</strong> Tâm lí</span>
+                                        <h4>@item.TENSACH</h4>
+                                        <span class="author"><strong>Tác giả:</strong> @item.TACGIA.TENTACGIA</span>
+                                        <span class="author"><strong>Lĩnh vực:</strong> @item.LINHVUC.TENLINHVUC</span>
                                         <div class="rating">
                                             <span>☆</span>
                                             <span>☆</span>
