--- a/WebThuvien/Views/Home/SliderSection.cshtml
+++ b/WebThuvien/Views/Home/SliderSection.cshtml
@@ -15,7 +15,7 @@
             {
                 <div class="item active">
                     <figure>
-                        <img style="height:700px" class="slider-image" alt="Home Slide" src="~/Content/ClientContent/images/Books/@item.HINHANH" />
+                        <img style="min-height:700px; max-height:750px;" class="slider-image" alt="Home Slide" src="~/Content/ClientContent/images/Books/@item.HINHANH" />
                     </figure>
                     <div class="container">
                         <div class="carousel-caption">
