--- a/WebThuvien/Views/Home/EventSection.cshtml
+++ b/WebThuvien/Views/Home/EventSection.cshtml
@@ -4,9 +4,9 @@
 <section class="news-events section-padding">
     <div class="container">
         <div class="center-content">
-            <h2 class="section-title c-light">News &amp; Events</h2>
+            <h2 class="section-title c-light">Thông tin &amp; Sự kiện</h2>
             <span class="underline center"></span>
-            <p class="lead c-light">The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.</p>
+            <p class="lead c-light">Sự kiện lí thú của thư viện diễn ra trong thời gian tới.</p>
         </div>
         <div class="news-events-list">
             <div class="single-news-event">
@@ -35,13 +35,13 @@
                             <li>
                                 <a href="#" target="_blank">
                                     <i class="fa fa-map-marker"></i>
-                                    New York, USA
+                                    Hà Nội - Việt Nam
                                 </a>
                             </li>
                         </ul>
-                        <h3><a href=".html#">It uses a dictionary of over 200 Latin word</a></h3>
-                        <p>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model.</p>
-                        <a class="btn btn-primary" href="#">Read More</a>
+                        <h3><a href=".html#">Sự kiện thường niên tại thư viện</a></h3>
+                        <p>Sự phát triển thói quen sử dụng thông tin của bạn đọc (BĐ) trong giai đoạn hiện nay. Thay vì sử dụng các hình thức tài liệu truyền thống như những năm trước đây, thì giờ đây BĐ lại chỉ chú trọng đến việc tìm kiếm các nguồn thông tin trên Internet thay vì đến thư viện.</p>
+                        <a class="btn btn-primary" href="#">Xem chi tiết</a>
                     </div>
                 </div>
                 <div class="clearfix"></div>
@@ -66,13 +66,13 @@
                             <li>
                                 <a href="#" target="_blank">
                                     <i class="fa fa-map-marker"></i>
-                                    New York, USA
+                                    Hà Nội
                                 </a>
                             </li>
                         </ul>
-                        <h3><a href=".html#">It uses a dictionary of over 200 Latin word</a></h3>
-                        <p>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', </p>
-                        <a class="btn btn-primary" href="#">Read More</a>
+                        <h3><a href=".html#">Sự kiện thường niên tại thư viện</a></h3>
+                        <p>Sự phát triển của  quen sử dụng thông tin của bạn đọc (BĐ) trong giai đoạn hiện nay. Thay vì sử dụng các hình thức tài liệu truyền thống như những năm trước đây, thì giờ đây BĐ lại chỉ chú trọng đến việc tìm kiếm các nguồn thông tin trên Internet thay vì đến thư viện, </p>
+                        <a class="btn btn-primary" href="#">Xem chi tiết</a>
                     </div>
                 </div>
                 <div class="clearfix"></div>
@@ -85,7 +85,7 @@
                     <div class="member-info">
                         <div class="content_meta_category">
                             <span class="arrow-right"></span>
-                            <a href="#." rel="category tag">EVENT</a>
+                            <a href="#." rel="category tag">SỰ KIỆN</a>
                         </div>
                         <ul class="news-event-info">
                             <li>
@@ -97,13 +97,13 @@
                             <li>
                                 <a href="#" target="_blank">
                                     <i class="fa fa-map-marker"></i>
-                                    New York, USA
+                                    Hà Nội
                                 </a>
                             </li>
                         </ul>
-                        <h3><a href=".html#">It uses a dictionary of over 200 Latin word</a></h3>
-                        <p>The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', </p>
-                        <a class="btn btn-primary" href="#">Read More</a>
+                        <h3><a href=".html#">Sự kiện thường niên tại thư viện</a></h3>
+                        <p>Sự phát triển của công nghệ các hình thức tài liệu truyền thống như những năm trước đây, thì giờ đây BĐ lại chỉ chú trọng đến việc tìm kiếm các nguồn thông tin trên Internet thay vì đến thư viện, </p>
+                        <a class="btn btn-primary" href="#">Xem chi tiết</a>
                     </div>
                 </div>
             </div>
