--- a/WebThuvien/Views/Home/Login.cshtml
+++ b/WebThuvien/Views/Home/Login.cshtml
@@ -12,6 +12,7 @@
     <title>Đăng nhập</title>
     <link rel="stylesheet" href="~/Content/bootstrap.min.css" />
     <link href="~/Content/ClientContent/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/Content/ClientContent/images/favicon.ico" rel="icon" type="image/x-icon" />
     <style>
         body {
             background: #222D32;
@@ -102,7 +103,7 @@
         }
 
         .form-control-label {
-            font-size: 10px;
+            font-size: 15px;
             color: #6C6C6C;
             font-weight: bold;
             letter-spacing: 1px;
