--- a/WebThuvien/Views/Admin/Timkiemsach.cshtml
+++ b/WebThuvien/Views/Admin/Timkiemsach.cshtml
@@ -30,7 +30,11 @@
                             </td>
                             <td>@item.MASACH</td>
                             <td>@item.TENSACH</td>
-                            <td>@item.TACGIA.TENTACGIA</td>
+                            <td>
+                                
+		                        <p>@item.TENTACGIA</p>
+                                
+                            </td>
                             <td>
                                 <div class="name-avatar d-flex align-items-center">
                                     <div class="avatar mr-2 flex-shrink-0">
