--- a/WebThuvien/Views/Admin/UploadSach.cshtml
+++ b/WebThuvien/Views/Admin/UploadSach.cshtml
@@ -17,7 +17,7 @@
                 <div class="form-group row">
                     <label class="col-sm-12 col-md-2 col-form-label">Mã sách</label>
                     <div class="col-sm-12 col-md-10">
-                        <input required class="form-control" type="text" placeholder="Ví dụ : GH123123" name="MASACH">
+                        <input required class="form-control" type="text" placeholder="Ví dụ : GH123123 hoặc để trống" name="MASACH">
                     </div>
                 </div>
                 <div class="form-group row">
