thêm sửa xóa tài khoản và fix trả sách

--- a/WebThuvien/Views/Admin/TraSach.cshtml
+++ b/WebThuvien/Views/Admin/TraSach.cshtml
@@ -193,11 +193,10 @@
         $('.MaSach').each(function (index) {
             if ($(this).val() !='') {
                 masach[i] = $(this).val();
-                
                 i++;
             }
         })
-        formData.append('masach[]',JSON.stringify( masach));
+        formData.append('masach', masach);
         //GOI AJAX
         
 
