--- a/WebThuvien/Views/Shared/_LayoutAdmin.cshtml
+++ b/WebThuvien/Views/Shared/_LayoutAdmin.cshtml
@@ -148,10 +148,9 @@
                             <span class="micon dw dw-user1"></span><span class="mtext">Người dùng và thẻ</span>
                         </a>
                         <ul class="submenu">
-                            <li><a href="#">Danh sách người dùng</a></li>
-                            <li><a href="#">Thêm mới người dùng</a></li>
-                            <li><a href="#">Tạo và xuất mẫu thẻ</a></li>
-
+                            <li><a href="/Admin/Taikhoan">Danh sách tài khoản</a></li>
+                            <li><a href="/Admin/The">Danh sách thẻ thư viện</a></li>
+                            <li><a href="/Admin/Themoi">Tạo thẻ mới</a></li>
                         </ul>
                     </li>
                     
